# process-machete

./: .gitignore  Cargo.toml  README.md
resources/: config.toml
src/: config.rs  lib.rs  logging.rs  main.rs  startup.rs
