[package]
name = "process-machete"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "=1.0.59"
humantime = "2.1.0"
humantime-serde = "1.1.1"
log = "0.4.17"
serde = { version = "1.0.147", features = ["derive"] }
simplelog = "0.12.0"
sysinfo = "0.26.7"
toml = "0.5.9"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winreg"] }
